# airbus_coop

./: .travis.yml  LICENSE  README.md
agi_docgen/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
agi_docgen/launch/: agi_docgen.launch
agi_docgen/resources/: docgen.conf
agi_docgen/resources/dot/: agi_workspace.dot
agi_docgen/resources/templates/: index.html  package.html
agi_docgen/src/agi_docgen/: __init__.py  env.py
airbus_cobot_gui/: CHANGELOG.rst  CMakeLists.txt  README.md  agidoc.xml  desktop-launch  package.xml  setup.py
airbus_cobot_gui/config/: default.conf  default_dashboards_register.xml  default_plugins_register.xml
airbus_cobot_gui/doc/: manifest.yaml
airbus_cobot_gui/doc/html/: ____init_____8py.html  ____init_____8py_source.html  account_2____init_____8py.html  account_2____init_____8py_source.html  accounts_8py.html  accounts_8py_source.html  accounts__ui_8py.html  accounts__ui_8py_source.html  alarm_2____init_____8py.html  alarm_2____init_____8py_source.html  alarm_8py.html  alarm_8py_source.html  annotated.html  autorun_8py.html  autorun_8py_source.html  classAlarmDescription.html  classQPopup.html  classTranslatorGadget.html  classcobot__gui_1_1account_1_1accounts_1_1Privilege-members.html  classcobot__gui_1_1account_1_1accounts_1_1Privilege.html  classcobot__gui_1_1account_1_1accounts_1_1User-members.html  classcobot__gui_1_1account_1_1accounts_1_1User.html  classcobot__gui_1_1account_1_1accounts_1_1UserAccountCommunicate-members.html  classcobot__gui_1_1account_1_1accounts_1_1UserAccountCommunicate.html  classcobot__gui_1_1account_1_1accounts_1_1UserAccountCommunicate__inherit__graph.map  classcobot__gui_1_1account_1_1accounts_1_1UserAccounts-members.html  classcobot__gui_1_1account_1_1accounts_1_1UserAccounts.html  classcobot__gui_1_1account_1_1accounts_1_1User__inherit__graph.map  classcobot__gui_1_1account_1_1accounts__ui_1_1AddUserAccountWidget-members.html  classcobot__gui_1_1account_1_1accounts__ui_1_1AddUserAccountWidget.html  classcobot__gui_1_1account_1_1accounts__ui_1_1AddUserAccountWidget__inherit__graph.map  classcobot__gui_1_1account_1_1accounts__ui_1_1AddUserAccountWidget__inherit__graph.md5  classcobot__gui_1_1account_1_1accounts__ui_1_1LoginDialog-members.html  classcobot__gui_1_1account_1_1accounts__ui_1_1LoginDialog.html  classcobot__gui_1_1account_1_1accounts__ui_1_1LoginDialog__inherit__graph.map  (+330 more)
airbus_cobot_gui/launch/: default.launch
airbus_cobot_gui/scripts/: airbus_cobot_gui_node.py  cobot_gui_node.py
airbus_coop/: CHANGELOG.rst  CMakeLists.txt  package.xml
airbus_docgen/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
airbus_docgen/launch/: airbus_docgen.launch
airbus_docgen/resources/: docgen.conf
airbus_plugins/airbus_plugin_log_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_descriptor.xml  setup.py
airbus_plugins/airbus_plugin_rqt/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_descriptor.xml  setup.py
airbus_plugins/airbus_ssm_plugin/: CHANGELOG.rst  CMakeLists.txt  agidoc.xml  package.xml  plugin_descriptor.xml  setup.py
airbus_plugins/plugin_rqt/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_descriptor.xml
airbus_pyqt_extend/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
airbus_pyqt_extend/resources/: resources.xml
airbus_ssm_core/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
airbus_ssm_core/action/: SimpleStateExecutor.action
airbus_ssm_core/launch/: ssm.launch  ssm_action_server.launch  ssm_descriptor.launch
airbus_ssm_core/nodes/: ssm_action_server_node.py  ssm_descriptor.py  ssm_node.py
airbus_ssm_core/resources/: default.scxml  empty_register.xml  test_template.scxml
airbus_ssm_core/src/: __init__.py
airbus_ssm_core/srv/: SSM_init.srv
airbus_ssm_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
airbus_ssm_tutorial/launch/: test.launch  tutorial1.launch
airbus_ssm_tutorial/resources/: skills.xml
cobot_gui/: CHANGELOG.rst  CMakeLists.txt  README.md  agidoc.xml  desktop-launch  package.xml  setup.py
cobot_gui/config/: airbus_helicopters.conf  aldo.conf  default.conf  default_dashboards_register.xml  default_plugins_register.xml  pma1_brackets_processing.conf  pma1_screwing_processing.conf  sara_lwr.conf  tuto.conf
cobot_gui/doc/: manifest.yaml
cobot_gui/launch/: airbus_helicopters.launch  aldo.launch  default.launch  pma1_brackets_processing.launch  pma1_screwing_processing.launch  sara_lwr.launch  tuto.launch
cobot_gui/scripts/: cobot_gui_node.py  main.py
dashboards/dashboards/: CMakeLists.txt  package.xml
dashboards/tuto_dashboard/: CMakeLists.txt  dashboard_descriptor.xml  package.xml  setup.py
dashboards/ur10_dashboard/: CMakeLists.txt  dashboard_descriptor.xml  package.xml  setup.py
plugins/application_status/: CMakeLists.txt  agidoc.xml  package.xml  plugin_descriptor.xml  setup.py
plugins/etat_materiel_plugin/: CMakeLists.txt  package.xml  plugin_descriptor.xml  setup.py
plugins/omni_gui/: CMakeLists.txt  package.xml  plugin_descriptor.xml  setup.py
plugins/plugin_helicoptere/: CMakeLists.txt  package.xml  plugin_descriptor.xml  setup.py
pyqt_agi_extend/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
pyqt_agi_extend/resources/: resources.xml
ssm_core/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
ssm_core/action/: SSM.action
ssm_core/launch/: ssm.launch  ssm_action_server.launch
ssm_core/nodes/: ssm_action_server_node.py  ssm_node.py
ssm_core/resources/: default.scxml  empty_register.xml
ssm_core/src/: __init__.py
ssm_core/srv/: SSM_init.srv
ssm_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
ssm_tutorial/launch/: test.launch  tutorial1.launch
ssm_tutorial/resources/: skills.xml
ssm_tutorial/src/: __init__.py
ssm_tutorial/ssm_log/: 2017_05_16_11_09_log.txt  2017_05_16_11_19_log.txt  2017_05_16_11_20_log.txt  2017_05_16_11_24_log.txt  2017_05_16_11_27_log.txt  2017_05_16_13_45_log.txt  2017_05_16_14_42_log.txt  2017_05_22_11_18_log.txt  2017_05_22_11_19_log.txt
(+917 files in other folders)
