<?xml version="1.0"?>
<package>
  <name>agi_docgen</name>
  <version>0.0.0</version>
  <description>The agi_docgen package</description>

  <maintainer email="ihm-pma@todo.todo">matignon martin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_pkg</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>catkin_pkg</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

</package>
