<?xml version="1.0"?>
<package>
  <name>airbus_cobot_gui</name>
  <version>0.0.2</version>
  <description>The airbus_cobot_gui package</description>

  <license>Apache 2.0</license>

  <maintainer email="led@ipa.fhg.de">Ludovic Delval</maintainer>
  <author email="martin.matignon.external@airbus.com">Martin Matignon</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>airbus_pyqt_extend</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>airbus_pyqt_extend</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <agidoc src="agidoc.xml"/>
  </export>

</package>

