<?xml version="1.0"?>
<package>
  <name>airbus_coop</name>
  <version>0.0.1</version>
  <description>The airbus_coop metapackage</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/airbus_coop</url>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>airbus_docgen</run_depend>
  <run_depend>cobot_gui</run_depend>
  <run_depend>pyqt_agi_extend</run_depend>
  <run_depend>ssm_core</run_depend>
  <run_depend>ssm_plugin</run_depend>
  <run_depend>ssm_tutorial</run_depend>
  <run_depend>plugin_log_manager</run_depend>
  <run_depend>plugin_node_manager</run_depend>
  <run_depend>plugin_rqt</run_depend>
  <run_depend>plugin_rviz</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
