<?xml version="1.0"?>
<package>
  <name>airbus_pyqt_extend</name>
  <version>0.0.3</version>
  <description>The airbus_pyqt_extend package</description>

  <license>Apache 2.0</license>

  <maintainer email="led@ipa.fhg.de">Ludovic Delval</maintainer>
  <author email="martin.matignon.external@airbus.com">Martin Matignon</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

</package>
