<?xml version="1.0"?>
<package>
  <name>airbus_ssm_tutorial</name>
  <version>0.0.3</version>
  <description>The airbus_ssm_tutorial package</description>

  <license>Apache 2.0</license>

  <maintainer email="led@ipa.fhg.de">Ludovic Delval</maintainer>
  <author email="eads@todo.todo">eads</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>airbus_ssm_core</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>airbus_ssm_core</run_depend>

</package>
