<?xml version="1.0"?>
<package>
  <name>cobot_gui</name>
  <version>2.0.1</version>
  <description>The cobot_gui package</description>

  <maintainer email="martin.matignon.external@airbus.com">Martin Matignon</maintainer>

  <license>Airbus Group SAS 2015</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>pyqt_agi_extend</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>pyqt_agi_extend</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <agidoc src="agidoc.xml"/>
  </export>
</package>

