<?xml version="1.0"?>
<package>
  <name>ssm_tutorial</name>
  <version>0.0.0</version>
  <description>The ssm_tutorial package</description>

  <maintainer email="eads@todo.todo">eads</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ssm_core</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ssm_core</run_depend>

  <export>
  </export>
</package>
