<?xml version="1.0"?>
<package>
  <name>ssm_tutorial</name>
  <version>0.0.1</version>
  <description>The ssm_tutorial package</description>

  <license>Apache 2.0</license>

  <maintainer email="led@ipa.fhg.de">Ludovic Delval</maintainer>
  <author email="eads@todo.todo">eads</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>ssm_core</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ssm_core</run_depend>

</package>
