<?xml version="1.0"?>
<package>
  <name>plugin_rqt</name>
  <version>0.0.2</version>
  <description>The plugin_rqt package</description>

  <license>Apache 2.0</license>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="martin.matignon.external@airbus.com">Matignon Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>airbus_cobot_gui</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>airbus_cobot_gui</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

</package>
