<package>
  <name>dashboards</name>
  <version>0.0.1</version>
  <description>
  This package provides dashboards components.
  </description>
  <maintainer email="martin.matignon.external@airbus.com">Martin Matignon</maintainer>
  
  <license>AIRBUS</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>tuto_dashboard</run_depend>
  <run_depend>ur10_dashboard</run_depend>
  
  <export>
   <metapackage/>
  </export>
</package>
