<?xml version="1.0"?>
<package>
  <name>omni_gui</name>
  <version>0.0.0</version>
  <description>The omni_gui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="martin.matignon.external@airbus.com">Martin Matignon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Airbus Group SAS 2015</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/omni_gui</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pyqt_agi_extend</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cobot_gui</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pyqt_agi_extend</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cobot_gui</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <dotgen>
      <internal_libs_depend/>
      <external_libs_depend/>
      <generation>
        <libraries/>
        <messages/>
        <actions/>
        <services/>
      </generation>
      <node name="omni_gui_v5_plugin_node">
          <io>
             <topics>
                <!-- Subscribers -->
                <subscriber name="/map/base_footprint" msg="tf" />
                <!-- Publishers -->
                <publisher name="/cmd_vel" msg="geometry_msgs::Twist" />
            </topics>
            <actionlibs/>
            <services/>
          </io>
          <parameters/>
      </node>
    </dotgen>
  </export>
</package>