<?xml version="1.0"?>
<package>
  <name>omni_gui</name>
  <version>0.0.0</version>
  <description>The omni_gui package</description>
  <maintainer email="martin.matignon.external@airbus.com">Martin Matignon</maintainer>
  <license>Airbus Group SAS 2015</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pyqt_agi_extend</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>cobot_gui</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pyqt_agi_extend</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>cobot_gui</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <dotgen>
      <internal_libs_depend/>
      <external_libs_depend/>
      <generation>
        <libraries/>
        <messages/>
        <actions/>
        <services/>
      </generation>
      <node name="omni_gui_v5_plugin_node">
          <io>
             <topics>
                <!-- Subscribers -->
                <subscriber name="/map/base_footprint" msg="tf" />
                <!-- Publishers -->
                <publisher name="/cmd_vel" msg="geometry_msgs::Twist" />
            </topics>
            <actionlibs/>
            <services/>
          </io>
          <parameters/>
      </node>
    </dotgen>
  </export>
</package>
