<?xml version="1.0"?>
<package>
  <name>plugin_helicoptere</name>
  <version>0.0.0</version>
  <description>The plugin_helicoptere package</description>
  <maintainer email="ihm-pma@todo.todo">ihm-pma</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cobot_gui</build_depend>
  <build_depend>pyqt_agi_extend</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>cobot_gui</run_depend>
  <run_depend>pyqt_agi_extend</run_depend>
  <run_depend>rospy</run_depend>

</package>
